# riccaticpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  pyproject.toml  requirements.txt
.github/workflows/: cmake-multi-platform.yml  python-platform.yml  static.yml
benchmarks/: CMakeLists.txt  brenner237.cpp  fig1.py  install_r_packages.R  papers.bib  plot_ivp_bench.R  plot_schrodinger.R  print_sysinfo.sh  readme.md  schrodinger_eq.py  solve_ivp_bench.py  test.py  test_riccati.py  test_schrod.py
benchmarks/data/: eq237.csv  eq237.txt
benchmarks/output/: bremer237-kummer.txt  bremer237-oscode.txt  bremer237-pyriccaticpp.txt  bremer237-rdc.txt  bremer237-riccaticpp.txt  bremer237-wkbmarching.txt  schrod.csv  schrod2.csv  schrod_BDF.csv  schrod_DOP853.csv  schrod_PYRICCATICPP.csv  schrod_RK45.csv  schrodinger_times.csv  schrodinger_times2.csv  solve_ivp_times.csv  solve_ivp_times_BDF.csv  solve_ivp_times_DOP853.csv  solve_ivp_times_PYRICCATICPP.csv  solve_ivp_times_RK45.csv
cmake/: riccatiConfig.cmake.in
cmake_deps/: CMakeLists.txt
docs/: Doxyfile.in
docs/html/: README_8md.html  _formulas.tex  _formulas_dark.tex  _r_e_a_d_m_e_8md.html  annotated.html  annotated.js  annotated_dup.js  arena__matrix_8hpp.html  arena__matrix_8hpp.js  arena__matrix_8hpp_source.html  chebyshev_8hpp.html  chebyshev_8hpp.js  chebyshev_8hpp_source.html  classes.html  classriccati_1_1SolverInfo-members.html  classriccati_1_1SolverInfo.html  classriccati_1_1SolverInfo.js  classriccati_1_1_solver_info-members.html  classriccati_1_1_solver_info.html  classriccati_1_1_solver_info.js  classriccati_1_1arena__alloc-members.html  classriccati_1_1arena__alloc.html  classriccati_1_1arena__alloc.js  classriccati_1_1arena__matrix-members.html  classriccati_1_1arena__matrix.html  classriccati_1_1arena__matrix.js  dir_779d899e79ff381671a2df16e628d9ba.html  dir_779d899e79ff381671a2df16e628d9ba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  evolve_8hpp.html  evolve_8hpp.js  evolve_8hpp_source.html  files.html  functions.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  (+61 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+50 more)
docs/pretty_stuff/: layout.xml
examples/: CMakeLists.txt  airy.cpp  readme.md
include/riccati/: arena_matrix.hpp  chebyshev.hpp  evolve.hpp  logger.hpp  macros.hpp  memory.hpp  riccati.hpp  solver.hpp  step.hpp  stepsize.hpp  sundials_matrix.hpp  utils.hpp  vectorizer.hpp
python/: CMakeLists.txt
python/benchmarks/: CMakeLists.txt  brenner237.cpp  fig1.py
src/: pymain.cpp
src/pyriccaticpp/: __init__.py
tests/: CMakeLists.txt
tests/benchmarks/: test.py
tests/python/: test.py
tests/riccati_test/: CMakeLists.txt  chebyshev_output.hpp  chebyshev_test.cpp  evolve_airy_test.cpp  evolve_bremer_test.cpp  evolve_burst_test.cpp  evolve_schrodinger_test.cpp  evolve_test.cpp  logger_test.cpp  solverinfo_test.cpp  step_test.cpp  stepsize_test.cpp  utils.hpp
